--- a/.gitignore
+++ b/.gitignore
@@ -131,6 +131,7 @@ cython_debug/
 
 # PyCharm
 # User-specific stuff
+.idea/
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/**/usage.statistics.xml
